--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,7 +44,7 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-    def lottieVersion = "3.4.0"
+    def lottieVersion = "3.4.4"
     implementation "com.airbnb.android:lottie:$lottieVersion"
     implementation 'com.flaviofaria:kenburnsview:1.0.7'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
@@ -52,6 +52,7 @@ dependencies {
     implementation 'com.github.smarteist:autoimageslider:1.3.9'
     //validations
     implementation 'com.mobsandgeeks:android-saripaar:2.0.3'
+    implementation 'com.basgeekball:awesome-validation:4.2'
     implementation 'com.mikhaellopez:circularimageview:4.2.0'
     //retrofit
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
@@ -61,6 +62,19 @@ dependencies {
 
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation 'com.android.volley:volley:1.1.1'
+
+
+    implementation 'com.cashfree.pg:android-sdk:1.6.1'
+
+    //Dependencies used by all payment functions
+    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
+
+    //doPayment - If OTP Auto read enabled (default)
+    implementation 'com.google.android.material:material:1.2.1'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.0'
 
 
 
