--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,7 @@ dependencies {
 
 
     implementation 'com.cashfree.pg:android-sdk:1.6.1'
-
+//    implementation 'com.cashfree.pg:android-support-sdk:1.4.2.2'
     //Dependencies used by all payment functions
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'com.android.volley:volley:1.1.1'
@@ -75,6 +75,19 @@ dependencies {
     implementation 'com.google.android.material:material:1.2.1'
     implementation 'com.google.android.gms:play-services-auth:19.0.0'
     implementation 'com.google.android.gms:play-services-auth-api-phone:17.5.0'
+
+    // new
+
+    //doUPIPayment
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+
+//    implementation 'com.google.android.gms:play-services:12.0.1'
+//    implementation 'com.google.android.gms:play-services-maps:17.0.0'
+
+    //doAmazonPayment
+    implementation 'androidx.browser:browser:1.3.0'
+
+    implementation 'com.google.guava:guava:27.0.1-android'
 
 
 
