--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,13 +6,14 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.RECEIVE_SMS" />
-    <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <queries>
         <intent>
             <action android:name="android.intent.action.VIEW" />
+
             <data
                 android:host="pay"
                 android:scheme="upi" />
@@ -29,7 +30,16 @@
         android:theme="@style/Theme.Dilbus"
         android:usesCleartextTraffic="true"
         tools:node="merge"
+        android:requestLegacyExternalStorage="true"
         tools:targetApi="m">
+        <activity android:name=".EditProfile"></activity>
+        <activity android:name=".Notification">
+            <intent-filter>
+                <action android:name="com.yashswi.dilpay.notification_action" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
+        </activity>
         <activity android:name=".bus.FilterActivity" />
         <activity android:name=".bank.BankAccounts" />
         <activity android:name=".Upgrade_membership" /> <!-- <meta-data android:name="com.google.android.gms.version" -->
@@ -60,7 +70,6 @@
         <activity android:name=".bus.Available_buses" />
         <activity android:name=".mobile.Mobile" />
         <activity android:name=".bus.Bus" />
-        <activity android:name=".View_more" />
         <activity android:name=".More" />
         <activity android:name=".Home_screen" />
         <activity android:name=".Register_screen" />
@@ -80,10 +89,10 @@
                 <action android:name="android.provider.Telephony.SMS_RECEIVED" />
             </intent-filter>
         </receiver>
-        <service
-            android:name=".firebase.messagingService">
+
+        <service android:name=".firebase.messagingService">
             <intent-filter>
-                <action android:name="com.google.firebase.MESSAGING_EVENT"/>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
     </application>
