--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,7 @@ allprojects {
         google()
         jcenter()
         maven { url 'https://maven.cashfree.com/release'}
+        maven { url "https://jitpack.io" }
 
     }
 }
