--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:usesCleartextTraffic="true"
         tools:node="merge"
         tools:targetApi="m">
-        <activity android:name=".WithdrawAmount"></activity>
+        <activity android:name=".bank.WithdrawAmount"></activity>
         <activity android:name=".TransactionsHistory" />
         <activity android:name=".EditProfile" />
         <activity android:name=".Notification">
