with all changes, all services history,recharge integration,phone lock integration.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,9 @@
         android:usesCleartextTraffic="true"
         tools:node="merge"
         tools:targetApi="m">
-        <activity android:name=".AddWalletAmount"></activity>
+        <activity android:name=".KeyGaurd"/>
+        <activity android:name=".Recharge_history"/>
+        <activity android:name=".AddWalletAmount"/>
         <activity android:name=".ConvertRewards" />
         <activity android:name=".bank.WithdrawAmount" />
         <activity android:name=".TransactionsHistory" />
