before integrating new dependency for verify pass

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,5 +105,10 @@ dependencies {
     //piucasso
     implementation 'com.squareup.picasso:picasso:2.71828'
 
+    //security pin
+    implementation 'com.github.GoodieBag:Pinview:v1.3'
+
+    implementation 'io.github.chaosleung:pinview:1.4.4'
+
 
 }
