--- a/app/build.gradle
+++ b/app/build.gradle
@@ -106,9 +106,9 @@ dependencies {
     implementation 'com.squareup.picasso:picasso:2.71828'
 
     //security pin
-    implementation 'com.github.GoodieBag:Pinview:v1.3'
-
-    implementation 'io.github.chaosleung:pinview:1.4.4'
-
+//    implementation 'com.github.GoodieBag:Pinview:v1.3'
+//
+//    implementation 'io.github.chaosleung:pinview:1.4.4'
+    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
 
 }
