--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,7 +46,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-messaging:21.0.1'
     implementation 'androidx.media2:media2:1.0.0-alpha04'
 //    implementation 'com.google.firebase:firebase-messaging:21.0.1'
-    testImplementation 'junit:junit:4.+'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     def lottieVersion = "3.4.4"
@@ -66,14 +66,13 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-scalars:2.9.0'
 
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.2.0'
 
 
     implementation 'com.cashfree.pg:android-sdk:1.6.1'
 //    implementation 'com.cashfree.pg:android-support-sdk:1.4.2.2'
     //Dependencies used by all payment functions
     implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.android.volley:volley:1.1.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
 
     //doPayment - If OTP Auto read enabled (default)
